moved blueprint added routes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>All Around Me</h1>
+
+<p>This is the home page for the All Around Me application.</p>
+
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
