--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,21 +14,31 @@
 <body>
   <div class="container">
     <header>
-      <%= image_tag("logo.png", :alt => "All Around Me", :class => "round") %>
+      <% logo = image_tag("logo.gif", :alt => "All Around Me", :class => "") %>
+      <%= link_to logo, root_path %>
       <nav class="round">
         <ul>
-          <li><%= link_to "Home", '#' %></li>
-          <li><%= link_to "Help", '#' %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Help", help_path %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
       </nav>
     </header>
+    
+    
     <section class="round">
-
-<%= yield %>
-
-  </section>
-</div>
+      <%= yield %>
+    </section>
+  
+    <footer>
+      <nav class="round">
+        <ul>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+      </nav>
+    </footer>
+  </div>
 <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
