--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,18 @@
 <html>
 <head>
   <title>AllAroundMe</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-  
+
   <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
   <%= stylesheet_link_tag 'blueprint/print',  :media => 'print' %>
   <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
   <%= stylesheet_link_tag 'custom', :media => 'screen' %>
+
+<!-- 
+  <%= stylesheet_link_tag    "application", :media => "screen" %>
+-->
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+  
 </head>
 <body>
   <div class="container">
