--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Home") %>
-<h1>All Around Me</h1>
+<div class="center hero-unit">
+  <h1>Multirate.Me</h1>
 
-<p>This is the home page for the All Around Me application.</p>
+  <p>This is the home page for the Multirate.Me application.</p>
 
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
