--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,162 +1,29 @@
 @import "bootstrap";
 
-/* mixins, variables, etc. */
+/* universal */
 
-$grayMediumLight: #eaeaea;
-
-@mixin box_sizing {
-  -moz-box-sizing: border-box; 
-  -webkit-box-sizing: border-box; 
-  box-sizing: border-box;
-}
-
-/* miscellaneous */
-
-.debug_dump {
-  clear: both;
-  float: left;
-  width: 100%;
-  margin-top: 45px;
-  @include box_sizing;
-}
-
-.container {
-  width: 710px;
+html {
+  overflow-y: scroll;
 }
 
 body {
-  background: #666;
-}
-
-header {
-  padding-top: 20px;
-}
-
-header img {
-  padding: 0px;
-  background: #fff;
+  padding-top: 60px;
 }
 
 section {
-  margin-top: 1em;
-  font-size: 120%;
-  padding: 20px;
-  background: #fff;
+  overflow: auto;
 }
 
-section h1 {
-  font-size: 200%;
+textarea {
+  resize: vertical;
 }
 
-footer {
+.center {
   text-align: center;
-  margin-top: 10px;
-  width: 710px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-footer nav {
-  float: none;
-}
-
-/* Links */
-
-a {
-  color: #09c;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #069;
-  text-decoration: underline;
-}
-
-a:visited {
-  color: #069;
-}
-
-/* Navigation */
-
-nav {
-  float: right;
-}
-
-nav {
-  background-color: white;
-  padding: 0 0.7em;
-  white-space: nowrap;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li {
-  list-style-type: none;
-  display: inline-block;
-  padding: 0.2em 0;
-}
-
-nav ul li a {
-  padding: 0 5px;
-  font-weight: bold;
-}
-
-nav ul li a:visited {
-  color: #09c;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-/* Sign up button */
-
-a.signup_button {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  text-align: center;
-  width: 190px;
-  color: #fff;
-  background: #006400;
-  font-size: 150%;
-  font-weight: bold;
-  padding: 20px;
-}
-
-/* Round corners */
-
-.round {
-  -moz-border-radius:    10px;
-  -webkit-border-radius: 10px;
-  border-radius:         10px;
-}
-
-
-/* User Show Page */
-table.profile {
-  width: 100%;
-  margin-bottom: 0;
-}
-
-td.main {
-  width: 70%;
-  padding: 1em;
-}
-
-td.sidebar {
-  width: 30%;
-  padding: 1em;
-  vertical-align: top;
-  background: #ffc;
-}
-
-.profile img.gravatar {
-  border: 1px solid #999;
-  margin-bottom: -15px;
+.center h1 {
+  margin-bottom: 10px;
 }
 
 /* typography */
@@ -188,9 +55,11 @@ p {
 
 /* header */
 
-#logo {
+.logo {
   float: left;
   margin-right: 10px;
+  margin-bottom: 10px;
+  margin-top: 20px;
   font-size: 1.7em;
   color: #fff;
   text-transform: uppercase;
@@ -204,3 +73,26 @@ p {
   color: #fff;
   text-decoration: none;
 }
+
+/* Override bootstrap navbar color */
+.navbar-inner {
+  background-color: #666;
+  background-image: -webkit-linear-gradient(top, #666, #666);
+  background-image: -moz-linear-gradient(top, #666, #666);
+  background-image: -ms-linear-gradient(top, #666, #666);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#666), to(#666));
+  background-image: -webkit-linear-gradient(top, #666, #666);
+  background-image: linear-gradient(top, #666, #666);
+  background-repeat: repeat-x;
+  
+}
+
+.navbar .nav > li > a {
+  float: none;
+  padding: 60px 10px 11px;
+  line-height: 19px;
+  color: #ccc;
+  text-decoration: none;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
