--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,7 +36,6 @@ h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
-  text-align: center;
 }
 
 h2 {
@@ -58,8 +57,8 @@ p {
 .logo {
   float: left;
   margin-right: 10px;
-  margin-bottom: 10px;
-  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
   font-size: 1.7em;
   color: #fff;
   text-transform: uppercase;
@@ -84,16 +83,20 @@ p {
   background-image: -webkit-linear-gradient(top, #666, #666);
   background-image: linear-gradient(top, #666, #666);
   background-repeat: repeat-x;
-  
+  min-height: 65px;
 }
 
 .navbar .nav > li > a {
   float: none;
-  padding: 60px 10px 11px;
+  padding: 35px 10px 11px;
   line-height: 19px;
   color: #ccc;
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.main-container {
+  padding-top: 20px;
 }
 
 /* footer */
