--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
     <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+<!--        <div class="container"> -->
           <nav>
             <% logo = image_tag("logo-multirate.png", :alt => "Multirate.Me", :class => "logo") %>
             <%= link_to logo, root_path %>
@@ -22,14 +22,14 @@
               <li><%= link_to "Sign in", '#' %></li>
             </ul>
           </nav>
-        </div>
+    <!--    </div> -->
       </div>
     </header>
     
     
-    <div class="container">
+    <div class="container main-container">
       <%= yield %>
-    </section>
+    </div>
   
     <footer>
       <nav>
