--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New user</h1>
+<% provide(:title,'Sign Up')%>
+<div class="hero-unit">
+  <h1>Sign Up</h1>
+  <p>Please sign up to get started with your reviews.</p>
+</div>
 
 <%= render 'form' %>
 
