--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "bootstrap-responsive";
 
 /* universal */
 
@@ -7,7 +8,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  //padding-top: 60px;
 }
 
 section {
