Removed gets from routes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, "Home") %>
 <div class="center hero-unit">
-  <h1>Multirate.Me</h1>
+  <h1>MultiRate.Me</h1>
 
-  <p>This is the home page for the Multirate.Me application.</p>
+  <p>This is the home page for the MultiRate.Me application.</p>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
