--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,16 +1,58 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 
-
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
 
+/* http://css-tricks.com/box-sizing/ */
 @mixin box_sizing {
   -moz-box-sizing: border-box; 
   -webkit-box-sizing: border-box; 
   box-sizing: border-box;
 }
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  //border: 1px solid #bbb;
+  //width: 100%;
+  //padding: 10px;
+  //height: auto;
+  //margin-bottom: 15px;
+  //@include box_sizing;
+}
+
+
+/* sidebar for gravatar*/
+
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.6em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
 
 /* miscellaneous */
 
