--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, html: {class: "well form-horizontal"}) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,23 +11,44 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+  <div class="control-group">
+    <%= f.label :first_name, class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :first_name, class: "input-xlarge" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
+  
+  <div class="control-group">
+    <%= f.label :last_name, class: "control-label" %>
+    <div class="controls">
+    <%= f.text_field :last_name, class: "input-xlarge" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+  
+  <div class="control-group">
+    <%= f.label :email, class: "control-label" %>
+    <div class="controls">
+    <%= f.text_field :email, class: "input-xlarge" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :admin %><br />
-    <%= f.number_field :admin %>
+  
+  <div class="control-group">
+    <%= f.label :password, class: "control-label" %>
+    <div class="controls">
+    <%= f.password_field :password, class: "input-xlarge" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  
+  <div class="control-group">
+    <%= f.label :password_confirmation, "Confirmation", class: "control-label" %>
+    <div class="controls">
+    <%= f.password_field :password_confirmation, class: "input-xlarge" %>
+    </div>
+  </div>
+ 
+  
+  <div class="form-actions">
+    <%= f.submit "Create User", class: "btn btn-primary" %>
+    <%= f.button "Cancel", class: "btn" %>
   </div>
 <% end %>
