--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,68 +1,21 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 
+
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
 
-/* http://css-tricks.com/box-sizing/ */
+/* http://css-tricks.com/box-sizing/ 
 @mixin box_sizing {
   -moz-box-sizing: border-box; 
   -webkit-box-sizing: border-box; 
   box-sizing: border-box;
 }
-
-/* forms */
-
-input, textarea, select, .uneditable-input {
-  //border: 1px solid #bbb;
-  //width: 100%;
-  //padding: 10px;
-  //height: auto;
-  //margin-bottom: 15px;
-  //@include box_sizing;
-}
+*/
 
 
-/* sidebar for gravatar*/
 
-aside {
-  section {
-    padding: 10px 0;
-    border-top: 1px solid $grayLighter;
-    &:first-child {
-      border: 0;
-      padding-top: 0;
-    }
-    span {
-      display: block;
-      margin-bottom: 3px;
-      line-height: 1;
-    }
-    h1 {
-      font-size: 1.6em;
-      text-align: left;
-      letter-spacing: -1px;
-      margin-bottom: 3px;
-    }
-  }
-}
-
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-
-
-/* miscellaneous */
-
-.debug_dump {
-  clear: both;
-  float: left;
-  width: 100%;
-  margin-top: 45px;
-  @include box_sizing;
-}
 
 
 /* universal */
@@ -138,31 +91,6 @@ p {
   text-decoration: none;
 }
 
-/* Override bootstrap navbar color */
-.navbar-inner {
-  background-color: #666;
-  background-image: -webkit-linear-gradient(top, #666, #666);
-  background-image: -moz-linear-gradient(top, #666, #666);
-  background-image: -ms-linear-gradient(top, #666, #666);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#666), to(#666));
-  background-image: -webkit-linear-gradient(top, #666, #666);
-  background-image: linear-gradient(top, #666, #666);
-  background-repeat: repeat-x;
-  min-height: 65px;
-}
-
-.navbar .nav > li > a {
-  float: none;
-  padding: 35px 10px 11px;
-  line-height: 19px;
-  color: #ccc;
-  text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-
-.main-container {
-  padding-top: 20px;
-}
 
 /* footer */
 
@@ -194,4 +122,104 @@ footer ul li {
   float: left;
   margin-left: 10px;
 }
+
+
+
+
+/* sidebar for gravatar*/
+
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.6em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  /* Removing it because unsupported in bootstrap  */
+  //@include box_sizing;
+}
+
+
+/* Override bootstrap navbar color */
+.navbar-inner {
+  background-color: #666;
+  background-image: -webkit-linear-gradient(top, #666, #666);
+  background-image: -moz-linear-gradient(top, #666, #666);
+  background-image: -ms-linear-gradient(top, #666, #666);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#666), to(#666));
+  background-image: -webkit-linear-gradient(top, #666, #666);
+  background-image: linear-gradient(top, #666, #666);
+  background-repeat: repeat-x;
+  min-height: 65px;
+}
+
+.navbar .nav > li > a {
+  float: none;
+  padding: 35px 10px 11px;
+  line-height: 19px;
+  color: #ccc;
+  text-decoration: none;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.main-container {
+  padding-top: 20px;
+}
+
+
+
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  padding: 10px;
+  height: 30px;
+  margin-bottom: 15px;
+  //@include box_sizing;
+}
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: square;
+    margin: 10px 10px 20px 20px;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  //@extend .control-label;
+  @extend .error;
+ }
+
 
