--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,51 +1,21 @@
-<%= form_for(@user, html: {class: "well form-horizontal"}) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= form_for(@user, html: {class: "well"}) do |f| %>
+  <%= render 'shared/error_messages' %>
 
-      <ul>
-      <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="control-group">
-    <%= f.label :first_name, class: "control-label" %>
-    <div class="controls">
-      <%= f.text_field :first_name, class: "input-xlarge" %>
-    </div>
-  </div>
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name, class: "" %>
   
-  <div class="control-group">
-    <%= f.label :last_name, class: "control-label" %>
-    <div class="controls">
-    <%= f.text_field :last_name, class: "input-xlarge" %>
-    </div>
-  </div>
-  
-  <div class="control-group">
-    <%= f.label :email, class: "control-label" %>
-    <div class="controls">
-    <%= f.text_field :email, class: "input-xlarge" %>
-    </div>
-  </div>
-  
-  <div class="control-group">
-    <%= f.label :password, class: "control-label" %>
-    <div class="controls">
-    <%= f.password_field :password, class: "input-xlarge" %>
-    </div>
-  </div>
-  
-  <div class="control-group">
-    <%= f.label :password_confirmation, "Confirmation", class: "control-label" %>
-    <div class="controls">
-    <%= f.password_field :password_confirmation, class: "input-xlarge" %>
-    </div>
-  </div>
- 
+    <%= f.label :last_name, class: "" %>
+    <%= f.text_field :last_name, class: "" %>
+
+    <%= f.label :email, class: "" %>
+    <%= f.text_field :email, class: "" %>
+
+    <%= f.label :password, class: "" %>
+    <%= f.password_field :password, class: "" %>
+
+    <%= f.label :password_confirmation, "Confirmation", class: "" %>
+    <%= f.password_field :password_confirmation, class: "" %>
   
   <div class="form-actions">
     <%= f.submit "Create User", class: "btn btn-primary" %>
