--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,7 +18,7 @@
     <%= f.password_field :password_confirmation, class: "" %>
   
   <div class="form-actions">
-    <%= f.submit "Create User", class: "btn btn-primary" %>
+    <%= f.submit "Create Account", class: "btn btn-primary" %>
     <%= f.button "Cancel", class: "btn" %>
   </div>
 <% end %>
