--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,18 +32,23 @@
     
     
     <div class="container main-container">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+
       <%= yield %>
       
-          <footer>
-            <div class="container"> 
-              <nav>
-                <ul>
-                  <li><%= link_to "About", about_path %></li>
-                  <li><%= link_to "Contact", contact_path %></li>
-                </ul>
-              </nav>
-            </div>
-          </footer>
+      <footer>
+        <div class="container"> 
+          <nav>
+            <ul>
+              <li><%= link_to "About", about_path %></li>
+              <li><%= link_to "Contact", contact_path %></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+      
       <%= debug(params) if Rails.env.development? %>
       
     </div>
