--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,7 @@
       
       <footer>
         <div class="container"> 
-          <nav>
-            <ul>
-              <li><%= link_to "About", about_path %></li>
-              <li><%= link_to "Contact", contact_path %></li>
-            </ul>
-          </nav>
+          Copyright &copy; CityLights Co.
         </div>
       </footer>
       
