--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,30 @@
           <nav>
             <% logo = image_tag("logo-multirate.png", :alt => "Multirate.Me", :class => "logo") %>
             <%= link_to logo, root_path %>
-<!--            <div class="nav-collapse"> -->
-              <ul class="nav pull-right">
+              <ul class="nav">
                 <li <%= nav_class(root_path) %>><%= link_to "Home", root_path %></li>
                 <li <%= nav_class(about_path) %>><%= link_to "About", about_path %></li>
                 <li <%= nav_class(contact_path) %>><%= link_to "Contact", contact_path %></li>
                 <li <%= nav_class(help_path) %>><%= link_to "Help", help_path %></li>
-                <li <%= nav_class(nil) %>><%= link_to "Sign in", '#' %></li>
               </ul>
-<!--            </div> -->
+              <ul id="current_user" class="nav pull-right">            
+                <% if signed_in? %>
+                  <li <%= nav_class(nil) %>><%= link_to "Users", '#' %></li>
+                  <li id="fat-menu" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      <%= gravatar_for @current_user, size: 18 %><%= @current_user.name %><b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "Profile", current_user %></li>
+                      <li><%= link_to "Settings", '#' %></li>
+                      <li class="divider"></li>
+                      <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+                    </ul>
+                  </li>
+                <% else %>
+                  <li <%= nav_class(nil) %>><%= link_to "Sign in", '#' %></li>
+                <% end %>
+              </ul>
           </nav>
         </div> 
       </div>
