Styling changes, added breadcrumb, fixed signin path, moved helpers from app to page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -155,6 +155,12 @@ aside {
   margin-right: 10px;
 }
 
+#profile img {
+  border: 2px solid #333;
+  border-radius: 2px 2px 2px 2px;
+  box-shadow: 0 1px 1px #444444;
+}
+
 
 /* miscellaneous */
 
