--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, "Contact") %>
-<h1>Pages#contact</h1>
+<div class="page-header">
+  <h1>Pages#contact</h1>
+</div>
 <p>Find me in app/views/pages/contact.html.erb</p>
