--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,31 @@
 <% provide(:title, @user.name) %>
 
+<ul class="breadcrumb">
+  <li>
+    <a href="#"><%= @user.name %></a> 
+    <span class="divider">/</span>
+  </li>
+  <li class="active">Profile</li>
+</ul>
 
-
-<div class="row">
-  <aside class="span4">
-    <section>
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-    </section>
-  </aside>
+<div class="page-header">
+  <h1 id="profile">
+    <%= gravatar_for @user %>
+    <%= @user.name %>
+  </h1>
 </div>
 
+<div class="row">
+  <div class="span4">
+    <strong>First name:</strong>  <%= @user.first_name %><br />
+    <strong>Last name:</strong>  <%= @user.last_name %><br />
+    <strong>Email:</strong>  <%= @user.email %><br />
+    <strong>URL</strong>  <%= link_to user_path(@user), @user %>
+    
+  </div>
+</div>
 
-
-
-<table class="profile" summary="Profile Information">
-  <tr>
-    <td class="main">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-    </td>
     <td class="sidebar round">
-      <strong>First name:</strong>  <%= @user.first_name %><br />
-      <strong>Last name:</strong>  <%= @user.last_name %><br />
-      <strong>Email:</strong>  <%= @user.email %><br />
-      <strong>URL</strong>  <%= link_to user_path(@user), @user %>
     </td>
   </tr>  
 </table>
