--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, "About") %>
-<h1>Pages#about</h1>
+<div class="page-header">
+  <h1>Pages#about</h1>
+</div>
 <p>Find me in app/views/pages/about.html.erb</p>
