Finished edit, moved from cookies to sessions

--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -12,5 +12,5 @@
     <%= f.label :password, class: "" %>
     <%= f.password_field :password, class: "" %>
 
-    <%= f.label :password_confirmation, "Confirmation", class: "" %>
+    <%= f.label :password_confirmation, "Confirm Password", class: "" %>
     <%= f.password_field :password_confirmation, class: "" %>
