Updated signup to be register

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,5 @@
 
   <p>This is the home page for the MultiRate.Me application.</p>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Register now!", register_path, class: "btn btn-large btn-primary" %>
 </div>
