--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title,'Sign Up')%>
+<% provide(:title,'Register')%>
 
 <div class="center hero-unit">
-  <h1>Sign Up</h1>
-  <p>Please sign up to get started with your reviews.</p>
+  <h1>Register</h1>
+  <p>Once you register your organization, you can get started with your team's reviews.</p>
 </div>
 
 <div class="row">
