--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="center hero-unit">
   <h1>Register</h1>
-  <p>Once you register your organization, you can get started with your team's reviews.</p>
+  <p>Once you register, you can get started with your reviews.</p>
 </div>
 
 <div class="row">
