--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,11 @@
         <% logo = image_tag("logo-multirate.png", :alt => "Multirate.Me", :class => "logo") %>
         <%= link_to logo, root_path %>
           <ul class="nav">
-            <li <%= nav_class(root_path) %>><%= link_to "Home", root_path %></li>
+            <% if signed_in? %>
+              <li <%= nav_class(dashboard_path(@current_user)) %>><%= link_to "Dashboard", dashboard_path(@current_user) %></li>
+            <% else %>
+              <li <%= nav_class(root_path) %>><%= link_to "Home", root_path %></li>
+            <% end %>
             <li <%= nav_class(about_path) %>><%= link_to "About", about_path %></li>
             <li <%= nav_class(contact_path) %>><%= link_to "Contact", contact_path %></li>
             <li <%= nav_class(help_path) %>><%= link_to "Help", help_path %></li>
