Added reviews partial

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,15 +56,16 @@ h1 {
   margin-bottom: 30px;
 }
 
+/*
 h2 {
   font-size: 1.7em;
   letter-spacing: -1px;
   margin-bottom: 30px;
-  text-align: center;
+  //text-align: center;
   font-weight: normal;
-  color: #999;
+  //color: #999;
 }
-
+*/
 p {
   font-size: 1.1em;
   line-height: 1.7em;
