--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -125,7 +125,15 @@ footer ul li {
 }
 
 
+.reviews {
+  list-style: none;
+  margin: 10px 0 0 0;
 
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
 
 /* sidebar for gravatar*/
 
