--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -129,9 +129,12 @@ footer ul li {
   list-style: none;
   margin: 10px 0 0 0;
 
-  li {
-    padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
+  .review-row{
+     
+      padding: 10px 0;
+      border-top: 1px solid #e8e8e8;
+      height: 40px;
+    
   }
 }
 
