Added review edit; Added correct_review filter

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -15,7 +15,7 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a href="#">Edit</a>
+          <%= link_to "Edit", edit_review_path(review) %>
         </li>
       </ul>
     </div>
