--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title,'Create Review')%>
+<% provide(:title, @review.name)%>
 
 <ul class="breadcrumb">
   <li>
@@ -9,11 +9,11 @@
     <%= link_to "Dashboard", dashboard_path(@current_user) %>
     <span class="divider">/</span>
   </li>
-  <li class="active">Create Review</li>
+  <li class="active"><%= @review.name %></li>
 </ul>
 
 <div class="page-header">
-  <h1>Start A New Review</h1>
+  <h1>Edit Review</h1>
 </div>
 
 <div class="row">
