Fixed duration datatype; Fixed correct_review filter to only protect edit, update; Fixed cancel buttons

--- a/app/views/reviews/_edit_form.html.erb
+++ b/app/views/reviews/_edit_form.html.erb
@@ -3,7 +3,7 @@
   
   
   <div class="form-actions">
-    <%= f.submit "Create Review", class: "btn btn-primary" %>
+    <%= f.submit "Save Changes", class: "btn btn-primary" %>
     <%= link_to "Cancel", dashboard_path(@current_user), class: "btn" %>
   </div>
 <% end %>
