Added reviewers controller; route; show view

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -17,6 +17,9 @@
         <li>
           <%= link_to "Edit", edit_review_path(review) %>
         </li>
+        <li>
+          <%= link_to "Manage Reviewers", reviewer_path(review) %>
+        </li>
       </ul>
     </div>
   <div>
