Huge smarm, mostly refactoring users into people and users to distinguish registered vs invited

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -18,7 +18,7 @@
           <%= link_to "Edit", edit_review_path(review) %>
         </li>
         <li>
-          <%= link_to "Manage Reviewers", reviewer_path(review) %>
+          <%= link_to "Manage Reviewers", review_reviewers_path(review) %>
         </li>
       </ul>
     </div>
