Added nested form, fixed model associations, fixed form declarations

--- a/app/views/reviewers/_reviewer.html.erb
+++ b/app/views/reviewers/_reviewer.html.erb
@@ -1,6 +1,9 @@
 
+<% if reviewer %>
 <li>
   <%= gravatar_for reviewer, size: 32 %>
-  <%= reviewer.name %>
+  <%= reviewer.name  %>
+  <%= reviewer.email  %>
   <%= relationship.humanize %>
 </li>
+<%end%>
