Playing with different ways to invite reviewers

--- a/app/views/reviewers/index.html.erb
+++ b/app/views/reviewers/index.html.erb
@@ -35,7 +35,7 @@
         </ul>
       <% end %>
       
-      <%= nested_form_for(@review, html: {class: "well"}) do |f| %>
+      <%= nested_form_for(@review, url: review_people_path(@review) ,html: {class: "well"}) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
         
