Simplified adding reviewers

--- a/app/views/reviewers/index.html.erb
+++ b/app/views/reviewers/index.html.erb
@@ -33,33 +33,13 @@
             %>
           <%end%>
         </ul>
+	  <% else %>
+		<p>You have not added any reviewers yet.</p>
       <% end %>
-      
-      <%= nested_form_for(@review, url: review_people_path(@review) ,html: {class: "well"}) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
 
-        
-
-        <%= f.fields_for :review_reviewers, 
-                f.object.review_reviewers.empty? ? 
-                f.object.review_reviewers.build :
-                :review_reviewers do |f2| %>
-       
-          <%= f2.label :relationship, class: "" %>
-          <%= f2.text_field :relationship, class: "" %>
-          
-          <%= f2.fields_for :reviewer, f2.object.reviewer.nil? ? f2.object.build_reviewer : :reviewer do |f1| %>
-            <%= f1.label :email, class: "" %>
-            <%= f1.text_field :email, class: "" %>
-         <% end %>
-        <% end %>
-        <%= f.link_to_add "Add a Reviewer", :review_reviewers %>
-
-        <div class="form-actions">
-          <%= f.submit "Invite Reviewer", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-      
+	 <%= link_to "Add Reviewer +", new_review_reviewer_path(@review), class: "btn btn-primary" %>
+  
+ 
     
     </div>
   </div>
