--- a/app/views/reviewers/new.html.erb
+++ b/app/views/reviewers/new.html.erb
@@ -20,40 +20,21 @@
 <div class="row">
   <div class="span8">
     <div class="well">
-      <% if @review.reviewers.any? %>
-        <ul class="users">
-          <% 
-            @review.review_reviewers.each do |review_reviewer| 
-            %>
-            <%= render  :partial => "reviewer", 
-                        :locals => {
-                                    :reviewer => review_reviewer.reviewer, 
-                                    :relationship => review_reviewer.relationship
-                                    } 
-            %>
-          <%end%>
-        </ul>
-      <% end %>
       
-      <%= nested_form_for(@review ,html: {class: "well"}) do |f| %>
+      <%= nested_form_for(@review_reviewer) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
-        
 
-        <%= f.fields_for :review_reviewers, 
-                f.object.review_reviewers.empty? ? 
-                f.object.review_reviewers.build :
-                :review_reviewers do |f2| %>
        
-          <%= f2.label :relationship, class: "" %>
-          <%= f2.text_field :relationship, class: "" %>
+          <%= f.label :relationship, class: "" %>
+          <%= f.text_field :relationship, class: "" %>
           
-          <%= f2.fields_for :reviewer, f2.object.reviewer.nil? ? f2.object.build_reviewer : :reviewer do |f1| %>
+          <%= f.fields_for :reviewer, f.object.reviewer.nil? ? f.object.build_reviewer : :reviewer do |f1| %>
             <%= f1.label :email, class: "" %>
             <%= f1.text_field :email, class: "" %>
          <% end %>
-        <% end %>
-        <%= f.link_to_add "Add a Reviewer", :review_reviewers %>
+
+  
 
         <div class="form-actions">
           <%= f.submit "Invite Reviewer", class: "btn btn-primary" %>
