--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,12 +1,6 @@
 <% provide(:title, @user.name + " Dashboard") %>
 
-<ul class="breadcrumb">
-  <li>
-    <a href="#"><%= @user.name %></a> 
-    <span class="divider">/</span>
-  </li>
-  <li class="active">Dashboard</li>
-</ul>
+<%= render 'shared/breadcrumb' %>
 
 <div class="page-header">
   <h1>Dashboard</h1>
