--- a/app/views/reviewers/new.html.erb
+++ b/app/views/reviewers/new.html.erb
@@ -1,16 +1,6 @@
 <% provide(:title, @review.name + " Reviewers") %>
 
-<ul class="breadcrumb">
-  <li>
-    <a href="#"><%= @current_user.name %></a> 
-    <span class="divider">/</span>
-  </li>
-  <li class="active">
-    <%= @review.name %>
-    <span class="divider">/</span>
-  </li>
-  <li>Reviewers</li>
-</ul>
+<%= render 'shared/breadcrumb' %>
 
 <div class="page-header">
   <h1>Reviewers for <%= @review.name %></h1>
