--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,16 +1,6 @@
 <% provide(:title,'Create Review')%>
 
-<ul class="breadcrumb">
-  <li>
-    <a href="#"><%= @current_user.name %></a> 
-    <span class="divider">/</span>
-  </li>
-  <li>
-    <%= link_to "Dashboard", dashboard_path(@current_user) %>
-    <span class="divider">/</span>
-  </li>
-  <li class="active">Create Review</li>
-</ul>
+<%= render 'shared/breadcrumb' %>
 
 <div class="page-header">
   <h1>Start A New Review</h1>
